--- a/app/backend/templates/product.html
+++ b/app/backend/templates/product.html
@@ -224,13 +224,36 @@
 										 {{ set.name }} <!-- <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status[$index].open, 'glyphicon-chevron-right': !status[$index].open}"></i> -->
 									  </uib-accordion-heading>
 								  <form class="form-horizontal" role="form">
-										<div class="form-group clearfix" ng-repeat="at in set.attributes">
+										<div class="form-group clearfix" ng-repeat="at in set.attributes" ng-init="at.values = [];">
 										  <label class="control-label col-sm-4" for="{{ at.code }}"> {{ at.label }} </label>
 										  <div class="col-sm-8">
 											<input type="text" class="form-control" id="{{ at.code }}" ng-if="at.type === 'Open Text'" placeholder="Enter {{ at.label }}" >
-											<a class="btn btn-primary" href="" ng-if="at.type === 'Single Choice'"> Add New {{ at.label }} </a>
+											
+											<div class="container_fluid" ng-if="at.type === 'Single Choice'">
+												<div class="row">
+													<div class="col-sm-8">
+														<input type="text" ng-model="at.newText" class="form-control" placeholder="add new {{ at.label }} here" >	
+													</div>
+													<a class="btn btn-primary" href=""  ng-click="addToList( at )"> Add New {{ at.label }} </a>
+												</div>
+												<div class="row">
+													<div class="col-sm-12">
+														<ul class="unstyled">
+															 <li ng-repeat="v in at.values">
+															  <label class="checkbox fwn">
+																<input type="checkbox" ng-model="v.disabled">
+																<span class="disabled-{{v.disabled}}"> {{v.text}} </span>
+															  </label>
+															</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+											
+
 										  </div>
 										</div>
+
 										<div class="form-group clearfix">        
 										  <div class="col-sm-12">
 											<a type="submit" class="btn btn-default pull-right" href="">Submit</a>
