--- a/app/frontend/views/signup.html
+++ b/app/frontend/views/signup.html
@@ -34,8 +34,8 @@
 				  <button ng-click="twitterConnect()" ng-disabled="disablePopup" class="btn btn-info"><span class="fa fa-twitter"></span> Twitter </button>
 			</div>
 
-		<p>Already have an account? <a href="/#/login">Login</a></p>
-		<p>Or go <a href="/#/">home</a>.</p>
+		<p>Already have an account? <a href="/#!/login">Login</a></p>
+		<p>Or go <a href="/#!/">home</a>.</p>
 
 	</div>
 </div>
