--- a/app/frontend/views/login.html
+++ b/app/frontend/views/login.html
@@ -27,8 +27,8 @@
 			</div>
 			  
 
-		<p>Need an account? <a href="/#/signup">Signup</a></p>
-		<p>Or go <a href="/#/">home</a>.</p>
+		<p>Need an account? <a href="/#!/signup">Signup</a></p>
+		<p>Or go <a href="/#!/">home</a>.</p>
 
 	</div>
 </div>
