--- a/app/frontend/views/product-full-mode.html
+++ b/app/frontend/views/product-full-mode.html
@@ -4,7 +4,7 @@
 	<div  class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<a href="#/products/{{activeCategory._id}}/{{activeProduct._id}}" class="pull-right" style="position:fixed;top:5px;right:5px;display:block;z-index:2;width:40px;height:40px;">  <img src="../assets/images/close.png"  border="0" alt="" style="max-width:100%;max-height:100%;height:auto;width:auto;"> </a> 
+				<a href="#!/products/{{activeCategory._id}}/{{activeProduct._id}}" class="pull-right" style="position:fixed;top:5px;right:5px;display:block;z-index:2;width:40px;height:40px;">  <img src="../assets/images/close.png"  border="0" alt="" style="max-width:100%;max-height:100%;height:auto;width:auto;"> </a> 
 			</div>
 		</div>
 		<div class="row">
@@ -18,7 +18,7 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
-				<a href="#/products/{{activeCategory._id}}/{{activeProduct._id}}" >  Go Back </a> 
+				<a href="#!/products/{{activeCategory._id}}/{{activeProduct._id}}" >  Go Back </a> 
 			</div>
 		</div>
 	</div>
