--- a/app/frontend/views/product-listing.html
+++ b/app/frontend/views/product-listing.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="jumbotron text-center">
-		<h1> <i class="fa fa-tags"></i> {{ activeCategory.name }} </h1>
+		<h1> <i class="fa fa-tags"></i>  {{ activeCategory.name || "TOP 100 PRODUCT(S)" }}  </h1>
 	</div>
 </div>
  <loader></loader> 
