--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -10,6 +10,8 @@ body, html{
 body{
 	font:15px/1.3 'Open Sans', sans-serif;
 	color: #5e5b64;
+	overflow-y:auto;
+	overflow-x:hidden;
 	//text-align:center;
 }
 
@@ -243,3 +245,7 @@ section, footer, header, aside, nav{
 	overflow:auto;
 }
 
+
+.btn-primary-spacing{
+	margin:5px;
+}
