--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -249,3 +249,21 @@ section, footer, header, aside, nav{
 .btn-primary-spacing{
 	margin:5px;
 }
+
+@media screen and (max-width:767px){
+	.product-details-page .product-image-wrapper .product-image.desktop{
+		display:none;position: absolute;left:-99999px;top:-9999px;z-index:-1;opacity:0;
+	}
+	.product-details-page .qty{
+		margin:6px;
+	}
+}
+
+@media screen and (min-width:768px){
+	.product-details-page .product-image-wrapper .product-image-mobile{
+		display:none;
+	}
+	.product-details-page .qty{
+		margin:6px auto;
+	}
+}
