--- a/app/frontend/views/product-details.html
+++ b/app/frontend/views/product-details.html
@@ -13,11 +13,11 @@
 	
 				<div data="product.images" slick-slider="{dots: false, arrows: false, draggable: true, slidesToShow:1, infinite:false}" slider-product-view >
 					<div class="product-image-wrapper" ng-repeat="image in product.images" on-finish-render-filters>
-						<!-- <a href="#!/product/{{product._id}}/fullmode" > <img ng-src="{{ image.imgdata.secure_url }}" ez-zoom class="product-image" ez-zoom-config="{'tint':true, 'tintColour':'#F90', 'tintOpacity':0.5}" ez-zoom-image="{{activeSlide === $index ? image.zoom : ''}}" /> </a> -->
-						 <img ng-src="{{ image.imgdata.secure_url }}" class="product-image" ng-elevate-zoom zoom-image="{{ activeSlide === $index ? image.imgdata.secure_url :'' }}" />
+						<a href="#!/product/{{product._id}}/fullmode" class="product-image-mobile"> <img ng-src="{{ image.imgdata.secure_url }}" class="product-image"/> </a>
+						 <img  ng-src="{{ image.imgdata.secure_url }}" class="product-image desktop" ng-elevate-zoom zoom-image="{{ activeSlide === $index ? image.imgdata.secure_url :'' }}" />
 					</div>
 				</div>
-				 <div class="thumbnail-view clearfix" data="product.images" slick-slider="{dots: false, arrows: true, draggable: false, slidesToShow:4, slidesToScroll:4, infinite:false, responsive: [{ breakpoint: 1170, settings: { slidesToShow: 4, slidesToScroll: 4 } }, { breakpoint: 992, settings: { slidesToShow: 3, slidesToScroll: 3 } }, { breakpoint: 768,  settings: { slidesToShow: 3, slidesToScroll: 3 } }, { breakpoint: 480, settings: { slidesToShow: 1,  slidesToScroll: 1 } } ] }" auto-slide-thumb >
+				 <div class="thumbnail-view clearfix" data="product.images" slick-slider="{dots: false, arrows: true, draggable: false, slidesToShow:3, slidesToScroll:3, infinite:false, responsive: [{ breakpoint: 1170, settings: { slidesToShow: 3, slidesToScroll: 3 } }, { breakpoint: 992, settings: { slidesToShow: 2, slidesToScroll: 2 } }, { breakpoint: 768,  settings: { slidesToShow: 2, slidesToScroll: 2 } }, { breakpoint: 480, settings: { slidesToShow: 1,  slidesToScroll: 1 } } ] }" auto-slide-thumb >
 					<div class="product-wrapper" ng-repeat="image in product.images" >
 						<div class="thumbnail-box">
 							<a href="" class="{{ activeSlide === $index?'active':''}}" ng-click="switchThumbView( $index )" ><img ng-src="{{ image.imgdata.secure_url }}" /></a>
@@ -75,7 +75,7 @@
 						<div class="col-sm-2">
 							<div >
 								<!-- <span > Quantity :</span> -->
-								<input type="text" style="width:41px;text-align:center;border-radius:4px;border:1px solid #eaeaea;padding:5px;display:block;margin:6px auto;" value="1" name="qty" />
+								<input type="text" class="qty" style="width:41px;text-align:center;border-radius:4px;border:1px solid #eaeaea;padding:5px;display:block;" value="1" name="qty" />
 							</div>			
 						</div>
 						<div class="col-sm-10">
