--- a/app/frontend/templates/product-grid-view.html
+++ b/app/frontend/templates/product-grid-view.html
@@ -2,7 +2,7 @@
 	<div class="product-image-wrapper">
 		 <!-- <a href="#!/products/{{activeCategory._id}}/{{product._id}}"> <img src="{{ product.images | smallImg }}" class="product-image" /> </a>   -->
 		 <!-- <a href=""> <img src="{{ product.images | smallImg }}" class="product-image" /> </a> -->
-		 <a href="#!/product/{{product._id}}"> <img src="{{ product.images | smallImg }}" class="product-image" /> </a>  
+		 <a href="#!/product/{{product._id}}"> <img src="{{ product.images | smallImg }}" class="product-image"  imageonload  /> </a>  
 	</div>
 	<!-- <p class="product-name">  <a href="#!/products/{{activeCategory._id}}/{{product._id}}">  <span style="font-weight:bold;">{{ product.name }}</span>  <span class="title">{{ product.title }}</span></a>   		</p> -->
 	<p class="product-name">  <a href="#!/product/{{product._id}}">  <span style="font-weight:bold;">{{ product.name }}</span>  <span class="title">{{ product.title }}</span></a>   		</p>
