--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -140,12 +140,12 @@ section, footer, header, aside, nav{
 	outline:none;
 }
 .product-image{
-	transform: scale(0);
+	/*transform: scale(0);
 	-webkit-transform: scale(0);
 	-moz-transform: scale(0);
 	-ms-transform: scale(0);
 	-o-transform: scale(0);
-	opacity:0;
+	opacity:0;*/
 	max-width:100%;max-height:100%;width:auto;height:auto;display:block;position:absolute;left:0;top:0;right:0;bottom:0;margin:auto auto;
 	transition: transform 0.5s ease-in-out 0s, opacity 0.5s ease-in 0s;
 	-webkit-transition: transform 0.5s ease-in-out 0s , opacity 0.5s ease-in 0s;
