--- a/app/frontend/views/product-details.html
+++ b/app/frontend/views/product-details.html
@@ -13,8 +13,8 @@
 	
 				<div data="product.images" slick-slider="{dots: false, arrows: false, draggable: true, slidesToShow:1, infinite:false}" slider-product-view >
 					<div class="product-image-wrapper" ng-repeat="image in product.images" on-finish-render-filters>
-						<a href="#!/product/{{product._id}}/fullmode" class="product-image-mobile"> <img ng-src="{{ image.imgdata.secure_url }}" class="product-image"/> </a>
-						 <img  ng-src="{{ image.imgdata.secure_url }}" class="product-image desktop" ng-elevate-zoom zoom-image="{{ activeSlide === $index ? image.imgdata.secure_url :'' }}" />
+						<a href="#!/product/{{product._id}}/fullmode"> <img ng-src="{{ image.imgdata.secure_url }}" class="product-image" ng-elevate-zoom zoom-image="{{ activeSlide === $index ? image.imgdata.secure_url :'' }}"/> </a>
+						<!-- <img  ng-src="{{ image.imgdata.secure_url }}" class="product-image desktop" ng-elevate-zoom zoom-image="{{ activeSlide === $index ? image.imgdata.secure_url :'' }}" /> -->
 					</div>
 				</div>
 				 <div class="thumbnail-view clearfix" data="product.images" slick-slider="{dots: false, arrows: true, draggable: false, slidesToShow:3, slidesToScroll:3, infinite:false, responsive: [{ breakpoint: 1170, settings: { slidesToShow: 3, slidesToScroll: 3 } }, { breakpoint: 992, settings: { slidesToShow: 2, slidesToScroll: 2 } }, { breakpoint: 768,  settings: { slidesToShow: 2, slidesToScroll: 2 } }, { breakpoint: 480, settings: { slidesToShow: 1,  slidesToScroll: 1 } } ] }" auto-slide-thumb >
