--- a/app/frontend/views/product-listing.html
+++ b/app/frontend/views/product-listing.html
@@ -1,6 +1,9 @@
 <div class="container">
-	<div class="jumbotron text-center">
-		<h1> <i class="fa fa-tags"></i>  {{ activeCategory.name || "TOP 100 PRODUCT(S)" }}  </h1>
+	<!-- <div class="jumbotron text-center">
+		<h1> <i class="fa fa-tags"></i>  {{ activeCategory.name || listingTitle }}  </h1>
+	</div> -->
+	<div class="well well-lg text-center">
+		Home / <span style="font-weight:bold;">{{ activeCategory.name || listingTitle }}</span>
 	</div>
 </div>
  <loader></loader> 
