--- a/app/frontend/views/product-listing.html
+++ b/app/frontend/views/product-listing.html
@@ -1,10 +1,10 @@
 <div class="container">
-	<!-- <div class="jumbotron text-center">
-		<h1> <i class="fa fa-tags"></i>  {{ activeCategory.name || listingTitle }}  </h1>
-	</div> -->
-	<div class="well well-lg text-center">
-		Home / <span style="font-weight:bold;">{{ activeCategory.name || listingTitle }}</span>
+	<div class="jumbotron text-center">
+		<h2> <i class="fa fa-tags"></i>  {{ activeCategory.name || listingTitle }}  </h2>
 	</div>
+	<!-- <div class="well well-lg text-center">
+		Home / <span style="font-weight:bold;">{{ activeCategory.name || listingTitle }}</span>
+	</div> -->
 </div>
  <loader></loader> 
 <div id="main" ng-hide="loading" >
