--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -120,7 +120,7 @@ section, footer, header, aside, nav{
 .product-grid-view{ text-align:center;}
 
 .product-grid-view:hover{
-	box-shadow:0px 0px 1px #9d9d9d;
+	/*box-shadow:0px 0px 1px #9d9d9d;*/
 }
 .product-list-view:hover{
 	
