--- a/app/frontend/templates/product-grid-view.html
+++ b/app/frontend/templates/product-grid-view.html
@@ -11,7 +11,7 @@
 		<span class="price special-price" ng-show="product.special_price > 0"><i class="fa fa-inr"></i>{{ product.special_price }}</span> 
 	</p>
 	<p>
-		<a class="btn btn-primary" ng-hide="!product.in_stock" ng-click="addToCart( product )" href="#!/cart"> <i class="fa fa-cart-plus" aria-hidden="true"></i>  Add To Cart </a>
+		<a class="btn btn-primary" ng-hide="!product.in_stock" ng-click="addToCart( product )" href=""> <i class="fa fa-cart-plus" aria-hidden="true"></i>  Add To Cart </a>
 		<button class="btn btn-warning" ng-show="!product.in_stock" ng-disabled="true"> <i class="fa fa-cart-plus" aria-hidden="true"></i>  Out of Stock </button>
 	</p>
 </section>
