--- a/app/frontend/views/cart.html
+++ b/app/frontend/views/cart.html
@@ -13,7 +13,7 @@
 						<div class="panel-title">
 							<div class="row">
 								<div class="col-md-6">
-									<h5><span class="glyphicon glyphicon-shopping-cart"> Cart</span></h5>
+									<h5><span class="glyphicon glyphicon-shopping-cart"> Your Cart </span></h5>
 								</div>
 								<div class="col-md-6">
 									<a href="#!/products" class="btn btn-primary btn-sm pull-right">
@@ -28,11 +28,18 @@
 							<div class="row" >
 								<div class="col-md-2 col-xs-12">
 									<div class="product-image-wrapper">
-										<a href="#!/product/{{product._id}}"> <img src="{{ product.images | smallImg }}" class="product-image"   /> </a>	
+										<a href="#!/product/{{product.item._id}}"> <img src="{{ product.item.images | smallImg }}" class="product-image"   /> </a>	
 									</div>
 								</div>
 								<div class="col-md-4 col-xs-12">
-									<p class="product-name">  <a href="#!/product/{{product._id}}">  <span style="font-weight:bold;">{{ product.name }}</span>  <span class="title">{{ product.title }}</span></a>
+									<p class="product-name">  <a href="#!/product/{{product.item._id}}">  <span style="font-weight:bold;">{{ product.item.name }}</span>  <span class="title">{{ product.item.title }}</span></a>
+								</div>
+								<div class="col-md-6 col-xs-12">
+									<p class="quantity"> {{ product.qty }}</p>
+									<p class="price-block"> 
+										<span class="price regular-price {{ product.item.special_price > 0? 'strickeout':'' }}"><i class="fa fa-inr"></i>{{ product.item.price }}</span> 
+										<span class="price special-price" ng-show="product.item.special_price > 0"><i class="fa fa-inr"></i>{{ product.item.special_price }}</span> 
+									</p>
 								</div>
 							</div>
 							<hr/>
