--- a/app/frontend/views/cart.html
+++ b/app/frontend/views/cart.html
@@ -1,8 +1,8 @@
-<div class="container">
+<!-- <div class="container">
 	<div class="jumbotron text-center">
 		 <h2> <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> {{ message }} </h2>
 	</div>
-</div> 
+</div>  -->
 
 <div class="view-cart-page">
 	<div class="container">
@@ -13,10 +13,11 @@
 						<div class="panel-title">
 							<div class="row">
 								<div class="col-md-6">
-									<h5><span class="glyphicon glyphicon-shopping-cart"> Your Cart </span></h5>
+									<h5> <i class="fa fa-shopping-cart" aria-hidden="true"> </i> Your Cart </h5>
+
 								</div>
 								<div class="col-md-6">
-									<a href="#!/products" class="btn btn-primary btn-sm pull-right">
+									<a href="#!/products" class="btn btn-primary btn-md pull-right">
 										<span class="glyphicon glyphicon-share-alt"></span> Continue Shopping
 									</a>
 								</div>
@@ -24,6 +25,23 @@
 						</div>
 					</div>
 					<div class="panel-body">
+						<div class="header">
+							<div class="row">
+								<div class="col-md-2 col-xs-12 text-center">
+									<h5> <strong> Product Picture </strong></h5>
+								</div>
+								<div class="col-md-4 col-xs-12 text-center">
+									<h5> <strong> Product Name </strong></h5>
+								</div>
+								<div class="col-md-6 col-xs-12 ">
+									<div class="col-md-3 col-xs-12 text-center"> <h5> <strong> Price </strong></h5> </div>
+									<div class="col-md-3 col-xs-12 text-center"> <h5> <strong> Quantity </strong></h5> </div>
+									<div class="col-md-3 col-xs-12 text-center"> <h5> <strong> Total </strong></h5> </div>
+									<div class="col-md-3 col-xs-12 text-center"> <h5> <strong> Delete </strong></h5> </div>
+								</div>
+							</div>
+							<hr/>
+						</div>
 						<div ng-repeat="product in cart">
 							<div class="row" >
 								<div class="col-md-2 col-xs-12">
@@ -32,22 +50,52 @@
 									</div>
 								</div>
 								<div class="col-md-4 col-xs-12">
-									<p class="product-name">  <a href="#!/product/{{product.item._id}}">  <span style="font-weight:bold;">{{ product.item.name }}</span>  <span class="title">{{ product.item.title }}</span></a>
+									<p class="product-name">  <a href="#!/product/{{product.item._id}}">  <span style="font-weight:bold;">{{ product.item.name }}</span>  <span class="title">{{ product.item.title }}</span></a></p>
+									<h4 style="max-height:35px;overflow:hidden;text-overflow: ellipsis;white-space: nowrap;"> <small> {{ product.item.short_description }} </small></h4>
+
 								</div>
 								<div class="col-md-6 col-xs-12">
-									<p class="quantity"> {{ product.qty }}</p>
+									<div class="col-md-3 text-center">
+										<h5> <strong> <i class="fa fa-inr"></i>{{ (product.item.special_price || product.item.price) | currency:'':0}}</strong> x </h5>
+									</div>
+									<div class="col-md-3 col-xs-9 text-center">
+										<input type="text" class="form-control input-sm" ng-model="product.qty">
+									</div>
+									<div class="col-md-3 col-xs-9 text-center">
+										<h4> <strong> <i class="fa fa-inr"></i>{{ ((product.item.special_price || product.item.price) * product.qty) | currency:'':0}}</strong></h4>
+									</div>
+									<div class="col-md-3 col-xs-2 text-center">
+										<button class="btn btn-danger btn-sm"> <span class="glyphicon glyphicon-trash"></span></button>
+									</div>
+									<!-- <p class="quantity"> {{ product.qty }}</p>
 									<p class="price-block"> 
 										<span class="price regular-price {{ product.item.special_price > 0? 'strickeout':'' }}"><i class="fa fa-inr"></i>{{ product.item.price }}</span> 
 										<span class="price special-price" ng-show="product.item.special_price > 0"><i class="fa fa-inr"></i>{{ product.item.special_price }}</span> 
-									</p>
+									</p> -->
 								</div>
 							</div>
 							<hr/>
 						</div>
-						
+						<div>
+							<div class="row">
+								<div class="col-md-9 col-xs-12 text-right">
+									<h5> Added/ Modified Items? </h5>
+								</div>
+								<div class="col-md-3 col-xs-12">
+									<a class="btn btn-default btn-md btn-block" ng-href=""> Update Cart </a>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="panel-footer">
-						Total : 
+						<div class="row">
+							<div class="col-md-9 col-xs-12 text-right">
+								<h4> <strong>Total : <i class="fa fa-inr"></i>{{ cartTotal | currency:'' }}</strong></h4>
+							</div>
+							<div class="col-md-3 col-xs-12">
+								<button class="btn btn-success btn-md btn-block"> Checkout </button>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
