--- a/app/frontend/views/product-details.html
+++ b/app/frontend/views/product-details.html
@@ -73,9 +73,9 @@
 				<p >
 					<div class="row">
 						<div class="col-sm-2">
-							<div >
+							<div>
 								<!-- <span > Quantity :</span> -->
-								<input type="text" class="qty" style="width:41px;text-align:center;border-radius:4px;border:1px solid #eaeaea;padding:5px;display:block;" value="1" name="qty" />
+								<input type="text" class="qty" style="width:41px;text-align:center;border-radius:4px;border:1px solid #eaeaea;padding:5px;display:block;" ng-model="product.qty" name="qty" />
 							</div>			
 						</div>
 						<div class="col-sm-10">
