--- a/app/frontend/templates/product-list-view.html
+++ b/app/frontend/templates/product-list-view.html
@@ -3,7 +3,7 @@
 		<div  class="col-md-4 col-sm-4 col-xs-12">
 			<!-- <a href="#!/products/{{activeCategory._id}}/{{product._id}}" class="product-image-wrapper"> <img src="{{ product.images | smallImg }}" class="product-image" /> </a>  -->
 			<!-- <a href="" class="product-image-wrapper"> <img src="{{ product.images | smallImg }}" class="product-image" /> </a> -->
-			<a href="#!/product/{{product._id}}" class="product-image-wrapper"> <img src="{{ product.images | smallImg }}" class="product-image"  /> </a> 
+			<a href="#!/product/{{product._id}}" class="product-image-wrapper"> <img ng-src="{{ product.images | smallImg }}" class="product-image"  /> </a> 
 		</div>
 		<div  class="col-md-8 col-sm-8 col-xs-12">
 			<!-- <p class="product-name">  <a href="#!/products/{{activeCategory._id}}/{{product._id}}">  <span style="font-weight:bold;">{{ product.name }}</span>  <span class="title">{{ product.title }}</span></a>   		</p> -->
