--- a/app/frontend/views/product-details.html
+++ b/app/frontend/views/product-details.html
@@ -94,6 +94,6 @@
 		</div>
 	</div>
 	<div class="container">
-		<a href="#!/products/{{activeCategory._id}}" class="pull-right"> Go Back </a>
+		<a href="#!/products/{{activeCategory._id}}" class="pull-right" goback> Go Back </a>
 	</div>
 </div>
