--- a/app/frontend/templates/product-list-view.html
+++ b/app/frontend/templates/product-list-view.html
@@ -15,10 +15,11 @@
 			<p class="descritpion">
 				{{ product.short_description }}
 			</p>
+			<hr/>
 			<p>
-				<a class="btn btn-primary" ng-hide="!product.in_stock" ng-click="addToCart( product )" href=""> <i class="fa fa-cart-plus" aria-hidden="true"></i>  Add To Cart </a>
-				<button class="btn btn-warning" ng-show="!product.in_stock" ng-disabled="true"> <i class="fa fa-cart-plus" aria-hidden="true"></i>  Out of Stock </button>
-				<button class="btn btn-primary"><!-- <i class="fa fa-heart"></i> --> Add To Wishlist </button>
+				<a class="btn btn-md btn-primary" ng-hide="!product.in_stock" ng-click="addToCart( product )" href=""> <i class="fa fa-cart-plus" aria-hidden="true"></i>  Add To Cart </a>
+				<button class="btn btn-md btn-warning" ng-show="!product.in_stock" ng-disabled="true"> <i class="fa fa-cart-plus" aria-hidden="true"></i>  Out of Stock </button>
+				<button class="btn btn-md btn-info"><!-- <i class="fa fa-heart"></i> --> Add To Wishlist </button>
 			</p>
 		</div>
 	</div>
