--- a/app/frontend/views/cart.html
+++ b/app/frontend/views/cart.html
@@ -20,7 +20,7 @@
 						<div class="panel-title">
 							<div class="row">
 								<div class="col-md-6">
-									<h5> <i class="fa fa-shopping-cart" aria-hidden="true"> </i> Your Cart </h5>
+									<h5 class="pull-left"> <i class="fa fa-shopping-cart" aria-hidden="true"> </i> Your Cart </h5>
 
 								</div>
 								<div class="col-md-6">
@@ -49,10 +49,10 @@
 									<h5> <strong> Product Name </strong></h5>
 								</div>
 								<div class="col-md-6 col-xs-12 ">
-									<div class="col-md-3 col-xs-12 text-center"> <h5> <strong> Price </strong></h5> </div>
-									<div class="col-md-3 col-xs-12 text-center"> <h5> <strong> Quantity </strong></h5> </div>
+									<div class="col-md-4 col-xs-12 text-center"> <h5> <strong> Price </strong></h5> </div>
+									<div class="col-md-2 col-xs-12 text-center"> <h5> <strong> Quantity </strong></h5> </div>
 									<div class="col-md-3 col-xs-12 text-center"> <h5> <strong> Subtotal </strong></h5> </div>
-									<div class="col-md-3 col-xs-12 text-center"> <h5> <strong> Delete </strong></h5> </div>
+									<div class="col-md-3 col-xs-12 text-center"> <h5> <strong> Remove </strong></h5> </div>
 								</div>
 							</div>
 							<hr/>
@@ -70,10 +70,10 @@
 
 								</div>
 								<div class="col-md-6 col-xs-12">
-									<div class="col-md-3 col-xs-3 text-center">
+									<div class="col-md-4 col-xs-3 text-center">
 										<h5> <strong> <i class="fa fa-inr"></i>{{ (product.item.special_price || product.item.price) | currency:'':0}}</strong> x </h5>
 									</div>
-									<div class="col-md-3 col-xs-3 text-center">
+									<div class="col-md-2 col-xs-3 text-center">
 										<input type="text" class="form-control input-sm" ng-model="product.qty">
 									</div>
 									<div class="col-md-3 col-xs-3 text-center">
@@ -88,7 +88,10 @@
 						</div>
 						<div>
 							<div class="row">
-								<div class="col-md-9 col-xs-12 text-right">
+								<div class="col-md-6 col-xs-12 text-right">
+									<a class="btn btn-danger btn-md" ng-href="" ng-click="clearCart()"> Clear Your Cart </a>
+								</div>
+								<div class="col-md-3 col-xs-12 text-right">
 									<h5> Added/ Modified Items? </h5>
 								</div>
 								<div class="col-md-3 col-xs-12">
