--- a/app/frontend/views/cart.html
+++ b/app/frontend/views/cart.html
@@ -1,9 +1,9 @@
-<!-- <div class="container">
+ <!-- <div class="container">
 	<div class="jumbotron text-center">
-		 <h2> <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> {{ message }} </h2>
+		 <h2> <i class="fa fa-shopping-cart"></i> {{ message }} </h2>
 	</div>
-</div>  -->
-
+</div>   -->
+<loader></loader>
 <div class="view-cart-page">
 	<div class="container">
 		<div class="row">
