--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -108,8 +108,16 @@ section, footer, header, aside, nav{
 .product-grid-view, .product-list-view{
 	margin: 10px auto;
 	/*border-bottom:1px solid #eaeaea;*/
-	padding:5px 15px;
+	
 } 
+.product-grid-view{
+	box-shadow :0px 0px 6px #666;
+	border-radius: 5px;
+	border: none;
+}
+.product-grid-view .wrapper, .product-list-view .wrapper{
+	padding:15px;
+}
 .product-details-page{
 	text-align:left;
 }
